fix: disabled button now is visible with different styles

--- a/src/components/AppContent/Gallery/GalleryPage/index.scss
+++ b/src/components/AppContent/Gallery/GalleryPage/index.scss
@@ -27,7 +27,7 @@
       color: #fff;
     }
 
-    &-disabled {
+    &[disabled] {
       color: #8c8c8c;
       background: #fff;
       &:hover {
